Did a lot of changes

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <th>Berufsbezeichnung</th>
                 <th>Beschreibung</th>
                 <th></th>
+                <th></th>
               </tr>
             </thead>
             <tbody id="personalDataTableBody"></tbody>
@@ -63,5 +64,11 @@
       </div>
     </div>
 
+    <div id="deleteConfirmation" class="modal">
+      <div id="modalDIV" class="modal-content">
+        <span class="close">&times;</span>
+        <p>Sind sie sich sicher, diesen Datensatz zu löschen?</p>
+      </div>
+    </div>
   </body>
 </html>
