--- a/edit.html
+++ b/edit.html
@@ -80,8 +80,18 @@
                     </div>
                     <!-- For company description -->
                     <div class="form__item">
-                        <label for="description" class="form__label">Beschreibung</label>
-                        <textarea class="form__input" name="description" id="description" placeholder="Schreibe eine Beschreibung zu dieser Firma"></textarea>
+                        <label for="companyname" class="form__label">Firmenname</label>
+                        <select class="form__input" name="companyname" id="companyname" onchange="updateForCompanyname(this)"></select>
+                        <span class="form__error"></span>
+                    </div>
+                    <div class="form__item">
+                        <label for="telefon" class="form__label">Abteilung</label>
+                        <select class="form__input" name="departement" id="departement" onchange="updateForDepartement(this)"></select>
+                        <span class="form__error"></span>
+                    </div>
+                    <div class="form__item">
+                        <label for="description" class="form__label">Berufsbezeichnung</label>
+                        <select class="form__select" name="jobtitle" id="jobtitle" onchange="updateForJobtitle(this)"></select>
                         <span class="form__error"></span>
                     </div>
                     <div class="form__item">
